Navigation sub list stuff. Starting on gallery quick tag but no real progress there

--- a/ClozerWoods/Views/MainGate/EditMediaItem.cshtml
+++ b/ClozerWoods/Views/MainGate/EditMediaItem.cshtml
@@ -35,7 +35,7 @@
         <input type="hidden" name="hasExistingFile" value="true">
         <p>@Model.SelectedMediaItem.FileName</p>
         <div class="thumbPreview">
-            <img src="@(Model.MediaUrl + Model.SelectedMediaItem.Thumbnail)">
+            <img src="@(Model.MediaUrl + System.IO.Path.DirectorySeparatorChar + Model.SelectedMediaItem.Thumbnail)">
         </div>
     }
 
